samples/_failures_safe/1761327911_a3d7fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d11fc112.c: In function ‘main’:
./samples/SAFE/__tmp_d11fc112.c:168:37: error: expected ‘)’ at end of input
  168 |     print_tokens(tokens, token_count
      |                 ~                   ^
      |                                     )
./samples/SAFE/__tmp_d11fc112.c:168:5: error: expected declaration or statement at end of input
  168 |     print_tokens(tokens, token_count
      |     ^~~~~~~~~~~~
